--- a/split-pane-layout-demo/AndroidManifest.xml
+++ b/split-pane-layout-demo/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name=".Demo"
+            android:name=".DemoFragment"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,6 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity android:name=".DemoFragment$DetailsActivity" />
     </application>
 
 </manifest>
