--- a/split-pane-layout-demo/AndroidManifest.xml
+++ b/split-pane-layout-demo/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.mobidevelop.widget" android:versionCode="1" android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="14" />
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="17" />
     <supports-screens
     	android:anyDensity="true"
     	android:smallScreens="true"
@@ -9,7 +9,8 @@
     />
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:allowBackup="false">
         <activity
             android:name=".Demo"
             android:label="@string/app_name" >
