--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.mobidevelop.spl
-VERSION_NAME=1.0.0-SNAPSHOT
+VERSION_NAME=1.0.0
 
 POM_DESCRIPTION=An Android layout which splits the available space between child views
 POM_URL=https://github.com/MobiDevelop/android-split-pane-layout
