--- a/split-pane-layout/src/main/AndroidManifest.xml
+++ b/split-pane-layout/src/main/AndroidManifest.xml
@@ -1,3 +1,2 @@
-<manifest package="com.mobidevelop.spl">
-
-</manifest>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.mobidevelop.spl.widget" />
