--- a/split-pane-layout-demo/src/main/AndroidManifest.xml
+++ b/split-pane-layout-demo/src/main/AndroidManifest.xml
@@ -1,9 +1,12 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mobidevelop.spl.demo">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.mobidevelop.spl.demo">
 
-    <application android:allowBackup="true"
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher">
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
 
         <activity android:name=".MainActivity">
             <intent-filter>
