--- a/split-pane-layout/build.gradle
+++ b/split-pane-layout/build.gradle
@@ -1,26 +1,25 @@
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.1.0"
+    compileSdkVersion 26
 
     defaultConfig {
-        applicationId "com.mobidevelop.spl"
-        minSdkVersion 3
-        targetSdkVersion 19
+        minSdkVersion 16
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-}
 
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
 }
 
 apply from: '../gradle-mvn-push.gradle'
